<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ProcuradosActivity!</string>
    <string name="app_name">Procurados PE</string>
    <string name="proc_nom">Nome:</string>
    <string name="proc_apelido">Apelido:</string>
    <string name="proc_dtnasc">Data de Nascimento:</string>
    <string name="bt_info">Mais Informações...</string>
    <string name="bt_denunciar">Denunciar!</string>
    <string name="test_nome">VALDENOR NOGUEIRA TORRES</string>
    <string name="test_apelido">&quot;TIAGUINHO OU BODÃO TESTE&quot;</string>
    <string name="test_dtnasc">26/6/1981</string>
    <string name="proc_numprocesso">Nº do Processo:</string>
    <string name="test_numproc">0146193-21.2009.8.17.0001 / 0007825-95.2010.8.17.0001</string>
    <string name="proc_comarca">Comarca:</string>
    <string name="test_comarca">RECIFE</string>
    <string name="proc_dtexpedmandado">Mandado expedido em:</string>
    <string name="test_dtexpedmandado">26/4/2011</string>
    <string name="proc_juiz">Juíz Competente</string>
    <string name="test_juiz">DRA FERNANDA MOURA - Processo 0044108-83.2011.8.17.0001</string>
    <string name="proc_historico">Histórico:</string>
    <string name="test_hist">Daniel Paulo Fernandes Abreu, vulgo \"Daniel\", é acusado da prática de vários homicídios na região metropolitana do Recife. Encontra-se com mandado de prisão em aberto.</string>
    <string name="text_splash">FAÇA SUA PARTE, DENUNCIE!</string>
    <string name="text_atencao_splash">Atenção: Todas as informações disponibilizadas nesta aplicação são públicas e provenientes do site da Secretaria de Defesa Social de Pernambuco.</string>
    <string name="dialog_atualizacao_titulo">Atualização</string>
    <string name="dialog_atualizacao_message">Deseja realizar uma atualização da lista de procurados?</string>
    <string name="dialog_sim">Sim</string>
    <string name="dialog_nao">Não</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_erro_titulo">Erro!</string>
    <string name="dialog_erro_msg_criar_xml_dir_local">Não foi possível criar o arquivo XML no diretório local.</string>
    <string name="dialog_erro_msg_carregar_arq_xml">Não foi possível carregar dados do arquivo XML.</string>
    <string name="dialog_erro_msg_conectando_ao_servidor">Não foi possível conectar ao servidor.</string>
    <string name="dialog_erro_msg_carregando_lista">Não foi possível carregar a lista de procurados. Necessário conexão com a internet!</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_atualizar">Atualizar</string>
    <string name="menu_sair">Sair</string>
    <string name="dialog_sobre_msg">Este aplicativo foi desenvolvido com o intuito de auxiliar a população pernambucana na identificação dos criminosos, além de manter os cidadãos atualizados sobre a lista dos 100 criminosos mais procurados do estado. \nTodas as informações disponibilizadas nesta aplicação são públicas e provenientes do site da Secretaria de Defesa Social de Pernambuco.</string>
    <string name="dialog_sobre_titulo">Sobre...</string>
    <string name="text_carregando">Carregando...</string>
</resources>
