<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
	android:layout_height="fill_parent" android:layout_width="fill_parent"
	android:orientation="vertical" android:background="@drawable/backgroundtiled">
	
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<com.google.ads.AdView android:id="@+id/adView"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			ads:adUnitId="a14ea637d9ad423" ads:adSize="BANNER"
			ads:loadAdOnCreate="true">
		</com.google.ads.AdView>
	</LinearLayout>

	<ScrollView android:layout_height="fill_parent"
		android:layout_width="fill_parent">

		<LinearLayout android:layout_width="fill_parent" android:padding="10px"
			android:layout_height="fill_parent" android:orientation="vertical">
			
			<LinearLayout android:orientation="vertical"
				android:background="#F8F400" android:layout_gravity="top|center_horizontal"
				android:layout_height="wrap_content" android:layout_width="fill_parent" android:paddingTop="10px" android:gravity="top|center_horizontal">
				<ImageView android:scaleType="fitCenter" android:id="@+id/ivFoto" android:layout_height="240dp" android:layout_width="match_parent"></ImageView>
				<LinearLayout android:layout_height="fill_parent"
					android:layout_width="match_parent" android:orientation="vertical"
					android:id="@+id/layoutDados" android:paddingTop="5px"
					android:paddingBottom="5px" android:paddingLeft="2px" android:paddingRight="2px">
					<TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
						android:textColor="#000000" android:id="@+id/tvNome"
						android:layout_gravity="center_horizontal" android:text="@string/test_nome"
						android:gravity="center_horizontal|center" android:textSize="18dp"></TextView>
					<TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
						android:textColor="#000000" android:id="@+id/tvApelido"
						android:textStyle="bold" android:layout_gravity="center_horizontal"
						android:text="@string/test_apelido" android:gravity="center_horizontal|center" android:textSize="18dp"></TextView>
				</LinearLayout>

			</LinearLayout>
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:layout_height="fill_parent">
				<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
					android:background="#FFFF88" android:gravity="center_horizontal|center" android:padding="2dp">
					<Button android:layout_height="wrap_content"
						android:layout_width="wrap_content" android:text="@string/bt_info" android:id="@+id/btDetalhes"></Button>
					<Button android:text="@string/bt_compartilhar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btCompartilhar"></Button>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>

</LinearLayout>